--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
         </div>
         <div>
             <label>
-                <input type="checkbox" id="context-enabled" checked>
+                <input type="checkbox" id="context-enabled">
                 컨텍스트 활성화
             </label>
         </div>
