--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,7 @@
         <div>
             <textarea id="user-input" rows="3" placeholder="메시지를 입력하세요..."></textarea>
             <button onclick="sendMessage()">전송</button>
+            <button onclick="newChat()">새 대화</button>
             <button onclick="clearChat()">대화 지우기</button>
         </div>
     </div>
@@ -115,12 +116,20 @@
             chatMessages.appendChild(messageDiv);
         }
 
-        function clearChat() {
-            document.getElementById('chat-messages').innerHTML = '';
-            conversationId = Date.now().toString(); // 새로운 대화 ID 생성
+        function newChat() {
+            if (confirm('새로운 대화를 시작하시겠습니까?')) {
+                document.getElementById('chat-messages').innerHTML = '';
+                conversationId = Date.now().toString();
+                appendMessage('system', '새로운 대화가 시작되었습니다.');
+            }
         }
 
-        // Enter 키로 메시지 전송
+        function clearChat() {
+            if (confirm('현재 대화 내용을 지우시겠습니까?')) {
+                document.getElementById('chat-messages').innerHTML = '';
+            }
+        }
+
         document.getElementById('user-input').addEventListener('keypress', function(e) {
             if (e.key === 'Enter' && !e.shiftKey) {
                 e.preventDefault();
